# cloudflare-tunnels-operator

./: Cargo.toml  Dockerfile  Readme.md  index.yaml
.github/workflows/: build.yml  helm.yml
charts/cloudflare-tunnels-operator/: Chart.yaml  values.yaml
charts/cloudflare-tunnels-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  customresourcedefinition.yaml  deployment.yaml  ingressclass.yaml  serviceaccount.yaml
deploy/: clustertunnel.yaml  secret.yaml
examples/: whoami.yaml
src/: context.rs  crdgen.rs  error.rs  lib.rs  main.rs
src/cloudflare/: client.rs  mod.rs
src/controller/: clustertunnel.rs  ingress.rs  mod.rs
src/controller/utils/: constant.rs  helper.rs  mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
