[package]
name = "cloudflare-tunnels-operator"
version = "0.3.5"
edition = "2024"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
kube = { version = "2.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26", features = ["latest"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
schemars = "1.0.4"
serde_json = "1.0"
cloudflare = { version = "0.14", default-features = false, features = [
    "rustls-tls",
] }
rand = "0.9"
sha256 = "1.5"
base64 = "0.22"
regex = "1.10"
actix-web = "4"
json-patch = "4.1.0"
